--- a/VRChat/76/1141976.html
+++ b/VRChat/76/1141976.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "AYRmJQposy0s79dpW5XjRC7qzhEvFU9MMc8AbwCHcgM="></script>
+    "gs/DNsX9TeLCXU2E9kYiEHsl8NFPs3uomjfAHhn7jlE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"兎鞠まり 同人3Dモデル","description":"※利用規約へ同意の上でのご購入をよろしくお願いします\n\n\nVTuber、兎鞠まりちゃんの同人3Dモデルです\nやったでおーい！！( •̀ .̫ •́ )✧ \n\nVRChat、clusterにすぐにアップロードできるように調整してあります!\n\nまた、Blenderファイルを梱包しているので、様々な用途にご利用いただけます\n\n内容物\n・Unitypackageファイル(VRChat向け)\n・VRMファイル(cluster向け)\n・Blenderファイル\n・取り扱い説明書\n\nVRM版はニコニ立体にてご覧いただけます\nhttps://3d.nicovideo.jp/works/td49382\n\n\nシェーダーにsynqark様のArktoon-Shadersを使用させていただいています\nhttps://packetbird.booth.pm/items/1027997","url":"https://booth.pm/ja/items/1141976","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2000"},"image":"https://booth.pximg.net/c/620x620/96e607b6-d0b4-45be-93a9-04c0ca140e9c/i/1141976/a5a9b479-fdf4-481a-ad11-d4eaf13021e5_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="AYRmJQposy0s79dpW5XjRC7qzhEvFU9MMc8AbwCHcgM="></script>
+    nonce="gs/DNsX9TeLCXU2E9kYiEHsl8NFPs3uomjfAHhn7jlE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1141976/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               294
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1141976/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               294
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
