--- a/VRChat/33/1145233.html
+++ b/VRChat/33/1145233.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "G9CNUKQIkA4qKzoySHguyCVRMZB3LC6yJ3wYcayWxLI="></script>
+    "dLERlYpG8CwGvrPZW16tZE4gCyDMJXWrcEi4ER7BTh0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRCワールド・フレンド履歴確認ツール","description":"# 概要\n VRChatのログファイルから、Joinしたワールドやフレンドの名前を抽出するツールです。\n\n# つかいかた\n 1. 下記にあるVRChatのログファイルをさがしてください。「?」にはログファイルが作成された日時やAM/PMが入ります。\n  C:/Users/(username)/AppData/LocalLow/VRChat/vrchat/output_log_??_??_??_??.txt\n 2. 探したファイルを vrc_world_user_checker_v03.exe にドラッグ＆ドロップします。\n 3. ログファイルと同じ場所に、VRChat_usrlog.txt が作成されるので見てください。\n\n# 出力例\n Joinしたワールドとフレンド名と日時が、VRChat_usrlog.txtの末尾に追記されていきます。\n\n 2018.12.19 22:36:07 World: Suna's Playground\n 2018.12.19 22:36:10  User: sunasaji\n ...\n\n# 注意\n VRChatのログファイルは順次消えていきます。\n VRCを抜けたときとかに本ツールで情報を抽出しておくとよいと思います。\n\n# 関連情報\n 下記のブログ記事をみてください。\n http://suna.hateblo.jp/entry/2018/12/21/000000\n\n# ソース\n 下記に公開中です。\n https://github.com/sunasaji/VRC_log_checker\n Python3で書かれています。EXE化するためにPyinstallerを使っています。\n\n# ライセンス\n CC0なので好きに使ってください。\n http://creativecommons.org/publicdomain/zero/1.0/deed.ja\n\n# 更新情報\n2018/12/20 v0.1 初版公開\n2018/12/27 v0.2 AudioTrigger,AnimationBool等の文字列を拾う不具合を修正\n2020/04/10 v0.3 VRChat更新に伴いユーザ名の表示フォーマットが変わったことに対応","url":"https://booth.pm/ja/items/1145233","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/7baa4280-41ca-42dd-8083-7a3432c8acf7/i/1145233/ed50ac74-4a3d-4cfb-815a-409474b8afc3_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="G9CNUKQIkA4qKzoySHguyCVRMZB3LC6yJ3wYcayWxLI="></script>
+    nonce="dLERlYpG8CwGvrPZW16tZE4gCyDMJXWrcEi4ER7BTh0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1145233/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               253
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1145233/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               253
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
