--- a/VRChat/62/1145062.html
+++ b/VRChat/62/1145062.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Tzg63cog229nVNT9xgmhk0jf/8errt6hfYM9UcQTRUk="></script>
+    "/o6yramoZq/YLiPcXhZuXfdCh6FG3Q30b9DoD12ebxo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"パンジャンドラム（ボクセルモデル）","description":"何かの拍子に作成したボクセルモデルです。\nゲーム作成やVRChatなどにぜひご利用ください。","url":"https://booth.pm/ja/items/1145062","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/121b495d-04e1-4a34-b180-05afadedd073/i/1145062/afb03437-2877-47a3-9890-27c661fb65a5_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Tzg63cog229nVNT9xgmhk0jf/8errt6hfYM9UcQTRUk="></script>
+    nonce="/o6yramoZq/YLiPcXhZuXfdCh6FG3Q30b9DoD12ebxo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1145062/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               15
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1145062/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               15
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
