--- a/VRChat/04/1144704.html
+++ b/VRChat/04/1144704.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "0cFVWIcHyd36gH2iBn/g9y0d2Y1z/ho2dv/s7cGniww="></script>
+    "igR8AqSlyyw4bA299JeH3kscQc8u0lUphpgjim5jXog="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"「お前が好きなあの子と恋ができるゲーム」","description":"一言で表すなら、RPGツクールのVRカノジョ版です\n\n無料でダウンロードできる上に、画像付きの説明書がついてあるので、\n取り敢えず見て頂ければなと\n\nそれと、VRChatを使用するので、アカウントの作成をお願いします。\n\n有料版と無料版で違いはありません","url":"https://booth.pm/ja/items/1144704","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/b3cb2a40-882b-4acf-a108-b51fb559b399/i/1144704/3e645dfd-bba5-4a72-808d-6446e4a40c80_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="0cFVWIcHyd36gH2iBn/g9y0d2Y1z/ho2dv/s7cGniww="></script>
+    nonce="igR8AqSlyyw4bA299JeH3kscQc8u0lUphpgjim5jXog="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,7 +155,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1144704/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               44
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1144704/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               44
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
