--- a/VRChat/77/1144577.html
+++ b/VRChat/77/1144577.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "G3jygvHCp8jMK6k9k0C8Lwqmi1O1Fqiw0E0DxMOEBsU="></script>
+    "hoZDeWcS/JV9KyrgCNiDs1hsbYddQ/2RbyIILKaFt98="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat用】ねこの髪留め【無料】","description":"VRChat用に作ったねこ型の髪留めです。\n\nポリゴン数/172\n\n色については好きに変えてください。\n\n自分で使うためだけに作ったので、もしかしたらなにか問題があるかもしれません、その場合はTwitterのリプかDMでおしらせください。\n\n・内容物\n　　FBX","url":"https://booth.pm/ja/items/1144577","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/fcf0d975-c982-4865-beba-1cd6e5c30f4a/i/1144577/405bca35-296d-47f5-b511-a2cd9857c216_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="G3jygvHCp8jMK6k9k0C8Lwqmi1O1Fqiw0E0DxMOEBsU="></script>
+    nonce="hoZDeWcS/JV9KyrgCNiDs1hsbYddQ/2RbyIILKaFt98="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -153,7 +155,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1144577/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               15
@@ -168,14 +170,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1144577/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               15
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
