--- a/VRChat/61/1144361.html
+++ b/VRChat/61/1144361.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "ki5XA1k0Emr/wd5KItK7Ao9Nsf0i8LPajyApgzj+KY8="></script>
+    "CnrgJQyuO124Z3FsHAPoFyYlpvww3TO5SrPqZtQWnfQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ベル付きチョーカー.unitypackage","description":"※2018/12/22 20：20　ベルのみのFBXのメッシュの乱れを修正\n\n商品画像がやっつけなことでおなじみのぽぴぞん新作は、遅すぎたクリスマスっぽいアクセサリー\n「ベル付きチョーカー.unitypackage」(たぶん1768ポリゴン)\nです。\n\n-商品説明-\n\nVRChatでの使用を想定した、クリスマスっぽい首輪のアクセサリーです。\n\nUnitypackageをぶちこむだけで使えるようになっているはずですが、standerdシェーダーで設定してあるため「シェーダーの変更を推奨」します。(裏面描画のあるシェーダーだとなおよし)\n\nシェイプキーによって首輪部分の形やベルのサイズなどをある程度調整することができます。\n\n改変用のテクスチャセットやfbx、ベル部分のみのfbxも付属しているため、ヘアアクセサリーとしての使用なども可能です。\n\n\n-利用規約-\n商用非商用を問わず自由にお使いいただけます。\n\n単体での再配布は禁止します。\nアバターペデスタルでの利用や、アバターに組み込む形で譲渡することを許可します。\n\n\n不明な点や、何か不備等ありましたらお手数ですが作者のTwitter(@popico_VT)までご一報下さい。","url":"https://booth.pm/ja/items/1144361","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/13e72562-5481-4676-9ce5-6a97e2f60d62/i/1144361/b7449b87-56f4-4238-9b97-9fde950d0b19_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ki5XA1k0Emr/wd5KItK7Ao9Nsf0i8LPajyApgzj+KY8="></script>
+    nonce="CnrgJQyuO124Z3FsHAPoFyYlpvww3TO5SrPqZtQWnfQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -141,6 +141,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -184,7 +186,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1144361/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               89
@@ -199,14 +201,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1144361/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               89
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
