--- a/VRChat/06/1144206.html
+++ b/VRChat/06/1144206.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "rz68WM0TFg4uoJ/oDlsnk8C4KqfsSoetjJjq47/BbNc="></script>
+    "yWKVFDpmDI/idwKRbw+/dDnUstgqiP1NjlD3V/Ht8KI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ACOGスコープ風 VRChat利用想定","description":"アサルトライフルなどの銃に取り付けるアクセサリーです。レンズに十字が入っています。unitypackageにRender Texture設定済みのprefabが入っています。アニメーションを別途設定する必要があります。次のページを参考に設定してください。https://www.pixiv.net/fanbox/creator/32828123/post/191780\n\n実際に使用しているところ\nhttps://twitter.com/YukiYukiVirtual/status/1076051038099001344\n\nGA-01s、GA-01A1にそのまま付けられます。その際、フリップサイトが干渉しますので、倒して使ってください。\n銃口側のレンズはありません。必要な場合は編集が必要です。\n本体は標準で単色マテリアルです。テクスチャを描く場合はUV展開する必要があります。\n\nダウンロード前にお読みください。 https://github.com/YukiYukiVirtual/license/blob/master/1.md\n","url":"https://booth.pm/ja/items/1144206","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/cdb02673-8664-4200-9407-c3c4df48aa2c/i/1144206/ccd9e22c-b1a0-40d4-b0b1-995e3be1aeef_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="rz68WM0TFg4uoJ/oDlsnk8C4KqfsSoetjJjq47/BbNc="></script>
+    nonce="yWKVFDpmDI/idwKRbw+/dDnUstgqiP1NjlD3V/Ht8KI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1144206/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               69
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1144206/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               69
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
